Add better validation and fix API spec
